# zml-python

./: README.md  lexer.py  pyproject.toml  reader.py  temp.py  test.zml  test_zml.py  zml.py
doc/source/: conf.py  index.rst  modules.rst  zen_markup_lang.rst
src/zen_markup_lang/: __init__.py  lexer.py  string_stream.py  zml.py
tests/: .gitignore  test.zml  test_zml.py
