[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zen_markup_lang"
version = "0.0.0"
description = "Read and write files in Zen Markup Language."
readme = "README.md"
authors = [{ name = "shi0rik0" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["zml"]
dependencies = []
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["build", "twine", "pytest", "sphinx"]

[project.urls]
Homepage = "https://github.com/shi0rik0/zml-python"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
